generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Credential {
  id           String     @id @default(uuid())
  email        String     @unique
  passwordHash String
  role         UserRole
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
  student      Student?
  professor    Professor?
  admin        Admin?

  @@index([passwordHash])
}

model Admin {
  id                 String     @id @default(uuid())
  createdAt          DateTime   @default(now())
  updatedAt          DateTime   @updatedAt
  registrationNumber String     @unique
  email              String     @unique
  firstName          String
  middleName         String?
  lastName           String?
  credentialId       String     @unique
  credential         Credential @relation(fields: [credentialId], references: [id])
  isDeleted          Boolean    @default(false)
}

model Faculty {
  id      String   @id @default(uuid())
  name    String   @unique
  schools School[]

  Subject Subject[]
}

model School {
  id          String       @id @default(uuid())
  name        String       @unique
  facultyId   String
  faculty     Faculty      @relation(fields: [facultyId], references: [id])
  departments Department[]

  Subject Subject[]
}

model Department {
  id            String         @id @default(uuid())
  name          String         @unique
  schoolId      String
  school        School         @relation(fields: [schoolId], references: [id])
  professors    Professor[]
  courses       Course[]
  courseBuckets CourseBucket[]
  programs      Program[]
  Subject       Subject[]
}

model Program {
  id           String      @id @default(uuid())
  name         String      @unique
  departmentId String
  department   Department  @relation(fields: [departmentId], references: [id])
  programType  ProgramType
  students     Student[]
  subjects     Subject[]   @relation("programToSubject")
  semesters    Semester[]  @relation("programToSemesters")
  sections     Section[]
}

model Section {
  id        String    @id @default(uuid())
  name      String
  batchId   String
  batch     Batch     @relation(fields: [batchId], references: [id])
  programId String
  program   Program   @relation(fields: [programId], references: [id])
  students  Student[]
}

model Student {
  id                           String                        @id @default(uuid())
  createdAt                    DateTime                      @default(now())
  updatedAt                    DateTime                      @updatedAt
  registrationNumber           String                        @unique
  programId                    String
  program                      Program                       @relation(fields: [programId], references: [id])
  email                        String                        @unique
  firstName                    String
  middleName                   String?
  lastName                     String?
  gender                       Gender
  semester                     Int
  cgpa                         Float?
  batchId                      String
  batch                        Batch                         @relation(fields: [batchId], references: [id])
  sectionId                    String?
  section                      Section?                      @relation(fields: [sectionId], references: [id])
  contactNumber                String                        @unique @db.VarChar(15)
  credentialId                 String                        @unique
  credential                   Credential                    @relation(fields: [credentialId], references: [id])
  isDeleted                    Boolean                       @default(false)
  standaloneSubjectPreferences StandaloneSubjectPreference[]
  bucketSubjectPreferences     BucketSubjectPreference[]
  standaloneAllotments         StandaloneAllotment[]
  bucketAllotments             BucketAllotment[]
  electiveSections             ElectiveSection[]             @relation("SubjectSections")

  @@index([registrationNumber])
}

model Professor {
  id                 String            @id @default(uuid())
  createdAt          DateTime          @default(now())
  updatedAt          DateTime          @updatedAt
  professorRankId    String
  professorRank      ProfessorRank     @relation(fields: [professorRankId], references: [id])
  registrationNumber String            @unique
  departmentId       String
  department         Department        @relation(fields: [departmentId], references: [id])
  email              String            @unique
  firstName          String
  middleName         String?
  lastName           String?
  credentialId       String            @unique
  credential         Credential        @relation(fields: [credentialId], references: [id])
  isDeleted          Boolean           @default(false)
  ElectiveSection    ElectiveSection[]
}

model Course {
  id                      String                        @id @default(uuid())
  code                    String
  name                    String
  credits                 Int
  departmentId            String
  department              Department                    @relation(fields: [departmentId], references: [id])
  semesterId              String?
  semester                Semester?                     @relation(fields: [semesterId], references: [id])
  courseBucketCourses     CourseBucketCourse[]
  isDeleted               Boolean                       @default(false)
  subjectTypes            SubjectType[]                 @relation("courseToSubjectCategory")
  standaloneAllotments    StandaloneAllotment[]
  bucketAllotments        BucketAllotment[]
  coursesWithSeats        SubjectCourseWithSeats[]      @relation("courseWithSeats")
  firstPreferenceCourses  StandaloneSubjectPreference[] @relation("FirstPreferenceCourse")
  secondPreferenceCourses StandaloneSubjectPreference[] @relation("SecondPreferenceCourse")
  thirdPreferenceCourses  StandaloneSubjectPreference[] @relation("ThirdPreferenceCourse")
  SubjectSection          ElectiveSection[]

  @@unique([code, departmentId])
  @@index([departmentId])
}

model CourseBucket {
  id                            String                         @id @default(uuid())
  name                          String
  departmentId                  String
  totalCredits                  Int
  numberOfCourses               Int
  department                    Department                     @relation(fields: [departmentId], references: [id])
  courses                       CourseBucketCourse[]
  subjectTypes                  SubjectType[]                  @relation("courseBucketToSubjectTypes")
  isDeleted                     Boolean                        @default(false)
  bucketAllotments              BucketAllotment[]
  courseBucketsWithSeats        SubjectCourseBucketWithSeats[] @relation("courseBucketWithSeats")
  firstPreferenceCourseBuckets  BucketSubjectPreference[]      @relation("FirstPreferenceCourseBucket")
  secondPreferenceCourseBuckets BucketSubjectPreference[]      @relation("SecondPreferenceCourseBucket")
  thirdPreferenceCourseBuckets  BucketSubjectPreference[]      @relation("ThirdPreferenceCourseBucket")

  @@unique([name, departmentId])
}

model CourseBucketCourse {
  id             String       @id @default(uuid())
  courseBucketId String
  courseBucket   CourseBucket @relation(fields: [courseBucketId], references: [id], onDelete: Cascade)
  courseId       String
  course         Course       @relation(fields: [courseId], references: [id], onDelete: Cascade)
  orderIndex     Int

  @@unique([courseBucketId, courseId])
  @@unique([courseBucketId, orderIndex])
}

model SubjectType {
  id            String         @id @default(uuid())
  name          String         @unique
  description   String?
  allotmentType AllotmentType
  scope         SubjectScope
  subjects      Subject[]
  isDeleted     Boolean        @default(false)
  courses       Course[]       @relation("courseToSubjectCategory")
  courseBuckets CourseBucket[] @relation("courseBucketToSubjectTypes")
}

model Subject {
  id                           String                         @id @default(uuid())
  name                         String
  semester                     Semester?                      @relation(fields: [semesterId], references: [id])
  semesterId                   String?
  batchId                      String
  batch                        Batch                          @relation(fields: [batchId], references: [id])
  departmentId                 String?
  department                   Department?                    @relation(fields: [departmentId], references: [id])
  schoolId                     String?
  school                       School?                        @relation(fields: [schoolId], references: [id])
  facultyId                    String?
  faculty                      Faculty?                       @relation(fields: [facultyId], references: [id])
  subjectTypeId                String
  subjectType                  SubjectType                    @relation(fields: [subjectTypeId], references: [id])
  isPreferenceWindowOpen       Boolean                        @default(false)
  dueDate                      DateTime?
  isAllotmentFinalized         Boolean                        @default(false)
  semesters                    Semester[]                     @relation("subjectSemesters")
  programs                     Program[]                      @relation("programToSubject")
  standaloneSubjectPreferences StandaloneSubjectPreference[]
  bucketSubjectPreferences     BucketSubjectPreference[]
  standaloneAllotments         StandaloneAllotment[]
  bucketAllotments             BucketAllotment[]
  coursesWithSeats             SubjectCourseWithSeats[]       @relation("subjectCoursesWithSeats")
  courseBucketsWithSeats       SubjectCourseBucketWithSeats[] @relation("subjectCourseBucketsWithSeats")
  numberOfCoursesInBucket      Int?

  @@index([batchId])
  @@index([semesterId])
  @@index([departmentId])
}

model SubjectCourseWithSeats {
  id             String            @id @default(uuid())
  courseId       String
  course         Course            @relation("courseWithSeats", fields: [courseId], references: [id], onDelete: Cascade)
  subjectId      String
  subject        Subject           @relation("subjectCoursesWithSeats", fields: [subjectId], references: [id], onDelete: Cascade)
  totalSeats     Int?
  availableSeats Int?
  sections       ElectiveSection[]

  @@unique([courseId, subjectId])
  @@index([subjectId])
}

model SubjectCourseBucketWithSeats {
  id             String       @id @default(uuid())
  courseBucketId String
  courseBucket   CourseBucket @relation("courseBucketWithSeats", fields: [courseBucketId], references: [id], onDelete: Cascade)
  subjectId      String
  subject        Subject      @relation("subjectCourseBucketsWithSeats", fields: [subjectId], references: [id], onDelete: Cascade)
  totalSeats     Int?
  availableSeats Int?

  @@unique([courseBucketId, subjectId])
}

model StandaloneSubjectPreference {
  id                       String   @id @default(uuid())
  subjectId                String
  subject                  Subject  @relation(fields: [subjectId], references: [id], onDelete: Cascade)
  studentId                String
  student                  Student  @relation(fields: [studentId], references: [id])
  firstPreferenceCourseId  String?
  firstPreferenceCourse    Course?  @relation("FirstPreferenceCourse", fields: [firstPreferenceCourseId], references: [id], onDelete: Cascade)
  secondPreferenceCourseId String?
  secondPreferenceCourse   Course?  @relation("SecondPreferenceCourse", fields: [secondPreferenceCourseId], references: [id], onDelete: Cascade)
  thirdPreferenceCourseId  String?
  thirdPreferenceCourse    Course?  @relation("ThirdPreferenceCourse", fields: [thirdPreferenceCourseId], references: [id], onDelete: Cascade)
  runAllotment             Boolean  @default(true)
  createdAt                DateTime @default(now())

  @@unique([subjectId, studentId])
  @@index([subjectId])
  @@index([studentId])
}

model BucketSubjectPreference {
  id                             String        @id @default(uuid())
  subjectId                      String
  subject                        Subject       @relation(fields: [subjectId], references: [id], onDelete: Cascade)
  studentId                      String
  student                        Student       @relation(fields: [studentId], references: [id], onDelete: Cascade)
  firstPreferenceCourseBucketId  String?
  firstPreferenceCourseBucket    CourseBucket? @relation("FirstPreferenceCourseBucket", fields: [firstPreferenceCourseBucketId], references: [id], onDelete: Cascade)
  secondPreferenceCourseBucketId String?
  secondPreferenceCourseBucket   CourseBucket? @relation("SecondPreferenceCourseBucket", fields: [secondPreferenceCourseBucketId], references: [id], onDelete: Cascade)
  thirdPreferenceCourseBucketId  String?
  thirdPreferenceCourseBucket    CourseBucket? @relation("ThirdPreferenceCourseBucket", fields: [thirdPreferenceCourseBucketId], references: [id], onDelete: Cascade)
  runAllotment                   Boolean       @default(true)
  createdAt                      DateTime      @default(now())

  @@unique([subjectId, studentId])
}

model StandaloneAllotment {
  id              String          @id @default(uuid())
  subjectId       String
  subject         Subject         @relation(fields: [subjectId], references: [id], onDelete: Cascade)
  studentId       String
  student         Student         @relation(fields: [studentId], references: [id])
  courseId        String
  course          Course          @relation(fields: [courseId], references: [id], onDelete: Cascade)
  allotmentStatus AllotmentStatus

  @@unique([studentId, subjectId])
  @@index([studentId])
}

model BucketAllotment {
  id              String          @id @default(uuid())
  studentId       String
  student         Student         @relation(fields: [studentId], references: [id])
  subjectId       String
  subject         Subject         @relation(fields: [subjectId], references: [id], onDelete: Cascade)
  courseBucketId  String
  courseBucket    CourseBucket    @relation(fields: [courseBucketId], references: [id])
  courseId        String
  course          Course          @relation(fields: [courseId], references: [id])
  semesterId      String
  semester        Semester        @relation(fields: [semesterId], references: [id])
  allotmentStatus AllotmentStatus

  @@unique([subjectId, studentId, courseId])
}

model Batch {
  id       String    @id @default(uuid())
  year     Int       @unique
  students Student[]
  subjects Subject[]
  Section  Section[]
}

model Semester {
  id               String            @id @default(uuid())
  number           Int               @unique
  subjects         Subject[]         @relation("subjectSemesters")
  bucketAllotments BucketAllotment[]
  subject          Subject[]
  programs         Program[]         @relation("programToSemesters")
  courses          Course[]
}

model ElectiveSection {
  id                       String                  @id @default(ulid())
  name                     String
  professorId              String?
  professor                Professor?              @relation(fields: [professorId], references: [id])
  students                 Student[]               @relation("SubjectSections")
  studentId                String?
  Course                   Course?                 @relation(fields: [courseId], references: [id])
  courseId                 String?
  SubjectCourseWithSeats   SubjectCourseWithSeats? @relation(fields: [subjectCourseWithSeatsId], references: [id])
  subjectCourseWithSeatsId String?

  @@unique([name, subjectCourseWithSeatsId])
}

model ProfessorRank {
  id         String      @id @default(uuid())
  name       String      @unique
  priority   Int         @unique
  professors Professor[]
}

enum Gender {
  Male
  Female
  Other
}

enum ProgramType {
  Undergraduate
  Postgraduate
  PhD
}

enum UserRole {
  Student
  Professor
  Admin
}

enum AllotmentType {
  Standalone
  Bucket
}

enum AllotmentStatus {
  Pending
  Confirmed
}

enum SubjectScope {
  AnyDepartment
  SameFaculty
  SameSchool
  SameDepartment
}

enum Status {
  Pending
  Completed
}
