//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Credential {
  id String [pk]
  email String [unique, not null]
  passwordHash String [not null]
  role UserRole [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  student Student
  professor Professor
  admin Admin
}

Table Admin {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  registrationNumber String [unique, not null]
  email String [unique, not null]
  firstName String [not null]
  middleName String
  lastName String
  credentialId String [unique, not null]
  credential Credential [not null]
  isDeleted Boolean [not null, default: false]
}

Table Faculty {
  id String [pk]
  name String [unique, not null]
  schools School [not null]
  Subject Subject [not null]
}

Table School {
  id String [pk]
  name String [unique, not null]
  facultyId String [not null]
  faculty Faculty [not null]
  departments Department [not null]
  Subject Subject [not null]
}

Table Department {
  id String [pk]
  name String [unique, not null]
  schoolId String [not null]
  school School [not null]
  professors Professor [not null]
  courses Course [not null]
  courseBuckets CourseBucket [not null]
  programs Program [not null]
  Subject Subject [not null]
}

Table Program {
  id String [pk]
  name String [unique, not null]
  departmentId String [not null]
  department Department [not null]
  programType ProgramType [not null]
  students Student [not null]
  subjects Subject [not null]
  semesters Semester [not null]
  sections Section [not null]
}

Table Section {
  id String [pk]
  name String [not null]
  batchId String [not null]
  batch Batch [not null]
  programId String [not null]
  program Program [not null]
  students Student [not null]
}

Table Student {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  registrationNumber String [unique, not null]
  programId String [not null]
  program Program [not null]
  email String [unique, not null]
  firstName String [not null]
  middleName String
  lastName String
  gender Gender [not null]
  semester Int [not null]
  cgpa Float
  batchId String [not null]
  batch Batch [not null]
  sectionId String
  section Section
  contactNumber String [unique, not null]
  credentialId String [unique, not null]
  credential Credential [not null]
  isDeleted Boolean [not null, default: false]
  standaloneSubjectPreferences StandaloneSubjectPreference [not null]
  bucketSubjectPreferences BucketSubjectPreference [not null]
  standaloneAllotments StandaloneAllotment [not null]
  bucketAllotments BucketAllotment [not null]
  electiveSections ElectiveSection [not null]
}

Table Professor {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  professorRankId String [not null]
  professorRank ProfessorRank [not null]
  registrationNumber String [unique, not null]
  departmentId String [not null]
  department Department [not null]
  email String [unique, not null]
  firstName String [not null]
  middleName String
  lastName String
  credentialId String [unique, not null]
  credential Credential [not null]
  isDeleted Boolean [not null, default: false]
  ElectiveSection ElectiveSection [not null]
}

Table Course {
  id String [pk]
  code String [not null]
  name String [not null]
  credits Int [not null]
  departmentId String [not null]
  department Department [not null]
  semesterId String
  semester Semester
  courseBucketCourses CourseBucketCourse [not null]
  isDeleted Boolean [not null, default: false]
  subjectTypes SubjectType [not null]
  standaloneAllotments StandaloneAllotment [not null]
  bucketAllotments BucketAllotment [not null]
  coursesWithSeats SubjectCourseWithSeats [not null]
  firstPreferenceCourses StandaloneSubjectPreference [not null]
  secondPreferenceCourses StandaloneSubjectPreference [not null]
  thirdPreferenceCourses StandaloneSubjectPreference [not null]
  SubjectSection ElectiveSection [not null]

  indexes {
    (code, departmentId) [unique]
  }
}

Table CourseBucket {
  id String [pk]
  name String [not null]
  departmentId String [not null]
  totalCredits Int [not null]
  numberOfCourses Int [not null]
  department Department [not null]
  courses CourseBucketCourse [not null]
  subjectTypes SubjectType [not null]
  isDeleted Boolean [not null, default: false]
  bucketAllotments BucketAllotment [not null]
  courseBucketsWithSeats SubjectCourseBucketWithSeats [not null]
  firstPreferenceCourseBuckets BucketSubjectPreference [not null]
  secondPreferenceCourseBuckets BucketSubjectPreference [not null]
  thirdPreferenceCourseBuckets BucketSubjectPreference [not null]

  indexes {
    (name, departmentId) [unique]
  }
}

Table CourseBucketCourse {
  id String [pk]
  courseBucketId String [not null]
  courseBucket CourseBucket [not null]
  courseId String [not null]
  course Course [not null]
  orderIndex Int [not null]

  indexes {
    (courseBucketId, courseId) [unique]
    (courseBucketId, orderIndex) [unique]
  }
}

Table SubjectType {
  id String [pk]
  name String [unique, not null]
  description String
  allotmentType AllotmentType [not null]
  scope SubjectScope [not null]
  subjects Subject [not null]
  isDeleted Boolean [not null, default: false]
  courses Course [not null]
  courseBuckets CourseBucket [not null]
}

Table Subject {
  id String [pk]
  name String [not null]
  semester Semester
  semesterId String
  batchId String [not null]
  batch Batch [not null]
  departmentId String
  department Department
  schoolId String
  school School
  facultyId String
  faculty Faculty
  subjectTypeId String [not null]
  subjectType SubjectType [not null]
  isPreferenceWindowOpen Boolean [not null, default: false]
  dueDate DateTime
  isAllotmentFinalized Boolean [not null, default: false]
  semesters Semester [not null]
  programs Program [not null]
  standaloneSubjectPreferences StandaloneSubjectPreference [not null]
  bucketSubjectPreferences BucketSubjectPreference [not null]
  standaloneAllotments StandaloneAllotment [not null]
  bucketAllotments BucketAllotment [not null]
  coursesWithSeats SubjectCourseWithSeats [not null]
  courseBucketsWithSeats SubjectCourseBucketWithSeats [not null]
  numberOfCoursesInBucket Int
}

Table SubjectCourseWithSeats {
  id String [pk]
  courseId String [not null]
  course Course [not null]
  subjectId String [not null]
  subject Subject [not null]
  totalSeats Int
  availableSeats Int
  sections ElectiveSection [not null]

  indexes {
    (courseId, subjectId) [unique]
  }
}

Table SubjectCourseBucketWithSeats {
  id String [pk]
  courseBucketId String [not null]
  courseBucket CourseBucket [not null]
  subjectId String [not null]
  subject Subject [not null]
  totalSeats Int
  availableSeats Int

  indexes {
    (courseBucketId, subjectId) [unique]
  }
}

Table StandaloneSubjectPreference {
  id String [pk]
  subjectId String [not null]
  subject Subject [not null]
  studentId String [not null]
  student Student [not null]
  firstPreferenceCourseId String
  firstPreferenceCourse Course
  secondPreferenceCourseId String
  secondPreferenceCourse Course
  thirdPreferenceCourseId String
  thirdPreferenceCourse Course
  runAllotment Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (subjectId, studentId) [unique]
  }
}

Table BucketSubjectPreference {
  id String [pk]
  subjectId String [not null]
  subject Subject [not null]
  studentId String [not null]
  student Student [not null]
  firstPreferenceCourseBucketId String
  firstPreferenceCourseBucket CourseBucket
  secondPreferenceCourseBucketId String
  secondPreferenceCourseBucket CourseBucket
  thirdPreferenceCourseBucketId String
  thirdPreferenceCourseBucket CourseBucket
  runAllotment Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (subjectId, studentId) [unique]
  }
}

Table StandaloneAllotment {
  id String [pk]
  subjectId String [not null]
  subject Subject [not null]
  studentId String [not null]
  student Student [not null]
  courseId String [not null]
  course Course [not null]
  allotmentStatus AllotmentStatus [not null]

  indexes {
    (studentId, subjectId) [unique]
  }
}

Table BucketAllotment {
  id String [pk]
  studentId String [not null]
  student Student [not null]
  subjectId String [not null]
  subject Subject [not null]
  courseBucketId String [not null]
  courseBucket CourseBucket [not null]
  courseId String [not null]
  course Course [not null]
  semesterId String [not null]
  semester Semester [not null]
  allotmentStatus AllotmentStatus [not null]

  indexes {
    (subjectId, studentId, courseId) [unique]
  }
}

Table Batch {
  id String [pk]
  year Int [unique, not null]
  students Student [not null]
  subjects Subject [not null]
  Section Section [not null]
}

Table Semester {
  id String [pk]
  number Int [unique, not null]
  subjects Subject [not null]
  bucketAllotments BucketAllotment [not null]
  subject Subject [not null]
  programs Program [not null]
  courses Course [not null]
}

Table ElectiveSection {
  id String [pk]
  name String [not null]
  professorId String
  professor Professor
  students Student [not null]
  studentId String
  Course Course
  courseId String
  SubjectCourseWithSeats SubjectCourseWithSeats
  subjectCourseWithSeatsId String

  indexes {
    (name, subjectCourseWithSeatsId) [unique]
  }
}

Table ProfessorRank {
  id String [pk]
  name String [unique, not null]
  priority Int [unique, not null]
  professors Professor [not null]
}

Table programToSubject {
  subjectsId String [ref: > Subject.id]
  programsId String [ref: > Program.id]
}

Table programToSemesters {
  semestersId String [ref: > Semester.id]
  programsId String [ref: > Program.id]
}

Table SubjectSections {
  electivesectionsId String [ref: > ElectiveSection.id]
  studentsId String [ref: > Student.id]
}

Table courseToSubjectCategory {
  subjecttypesId String [ref: > SubjectType.id]
  coursesId String [ref: > Course.id]
}

Table courseBucketToSubjectTypes {
  subjecttypesId String [ref: > SubjectType.id]
  coursebucketsId String [ref: > CourseBucket.id]
}

Table subjectSemesters {
  semestersId String [ref: > Semester.id]
  subjectsId String [ref: > Subject.id]
}

Enum Gender {
  Male
  Female
  Other
}

Enum ProgramType {
  Undergraduate
  Postgraduate
  PhD
}

Enum UserRole {
  Student
  Professor
  Admin
}

Enum AllotmentType {
  Standalone
  Bucket
}

Enum AllotmentStatus {
  Pending
  Confirmed
}

Enum SubjectScope {
  AnyDepartment
  SameFaculty
  SameSchool
  SameDepartment
}

Enum Status {
  Pending
  Completed
}

Ref: Admin.credentialId - Credential.id

Ref: School.facultyId > Faculty.id

Ref: Department.schoolId > School.id

Ref: Program.departmentId > Department.id

Ref: Section.batchId > Batch.id

Ref: Section.programId > Program.id

Ref: Student.programId > Program.id

Ref: Student.batchId > Batch.id

Ref: Student.sectionId > Section.id

Ref: Student.credentialId - Credential.id

Ref: Professor.professorRankId > ProfessorRank.id

Ref: Professor.departmentId > Department.id

Ref: Professor.credentialId - Credential.id

Ref: Course.departmentId > Department.id

Ref: Course.semesterId > Semester.id

Ref: CourseBucket.departmentId > Department.id

Ref: CourseBucketCourse.courseBucketId > CourseBucket.id [delete: Cascade]

Ref: CourseBucketCourse.courseId > Course.id [delete: Cascade]

Ref: Subject.semesterId > Semester.id

Ref: Subject.batchId > Batch.id

Ref: Subject.departmentId > Department.id

Ref: Subject.schoolId > School.id

Ref: Subject.facultyId > Faculty.id

Ref: Subject.subjectTypeId > SubjectType.id

Ref: SubjectCourseWithSeats.courseId > Course.id [delete: Cascade]

Ref: SubjectCourseWithSeats.subjectId > Subject.id [delete: Cascade]

Ref: SubjectCourseBucketWithSeats.courseBucketId > CourseBucket.id [delete: Cascade]

Ref: SubjectCourseBucketWithSeats.subjectId > Subject.id [delete: Cascade]

Ref: StandaloneSubjectPreference.subjectId > Subject.id [delete: Cascade]

Ref: StandaloneSubjectPreference.studentId > Student.id

Ref: StandaloneSubjectPreference.firstPreferenceCourseId > Course.id [delete: Cascade]

Ref: StandaloneSubjectPreference.secondPreferenceCourseId > Course.id [delete: Cascade]

Ref: StandaloneSubjectPreference.thirdPreferenceCourseId > Course.id [delete: Cascade]

Ref: BucketSubjectPreference.subjectId > Subject.id [delete: Cascade]

Ref: BucketSubjectPreference.studentId > Student.id [delete: Cascade]

Ref: BucketSubjectPreference.firstPreferenceCourseBucketId > CourseBucket.id [delete: Cascade]

Ref: BucketSubjectPreference.secondPreferenceCourseBucketId > CourseBucket.id [delete: Cascade]

Ref: BucketSubjectPreference.thirdPreferenceCourseBucketId > CourseBucket.id [delete: Cascade]

Ref: StandaloneAllotment.subjectId > Subject.id [delete: Cascade]

Ref: StandaloneAllotment.studentId > Student.id

Ref: StandaloneAllotment.courseId > Course.id [delete: Cascade]

Ref: BucketAllotment.studentId > Student.id

Ref: BucketAllotment.subjectId > Subject.id [delete: Cascade]

Ref: BucketAllotment.courseBucketId > CourseBucket.id

Ref: BucketAllotment.courseId > Course.id

Ref: BucketAllotment.semesterId > Semester.id

Ref: ElectiveSection.professorId > Professor.id

Ref: ElectiveSection.courseId > Course.id

Ref: ElectiveSection.subjectCourseWithSeatsId > SubjectCourseWithSeats.id